--- a/css/marketing.css
+++ b/css/marketing.css
@@ -1,57 +1,112 @@
-main{
-    background-color: #E69600;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.container{
-    padding: 15px;
-    margin: 20px;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-  
-}
-.encabezado__servicio h2{
-    font-family: 'Josefin Slab', serif;
-    font-size:50px ;
-    text-align: center;
-    text-decoration: underline;
-    font-weight: 900px;
-    margin: 20px;
-    color: #AA1e1e;
-}
-.encabezado__servicio p{
-    font-family: 'Josefin Slab', serif;
-    font-size:30px ;
-    text-align: center;
-    font-weight: 900px;
-    margin: 20px;
-}
-.container li{
-    list-style: none;
+header {
+  background-color: black;
 }
 
-.titulo{
-        margin: 15px;
-        padding:10px;
-        font-family: 'Josefin Slab', serif;
-        font-weight: 800;
-        font-size: x-large;
-        text-align: center;
-        background-color: #AA1e1e;
+header .nav-brand {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 10px;
+  font-size: xx-large;
+  text-align: center;
 }
-.boton{
-    margin:10px;
-    padding:15px;
-    background-color: black;
-    font-family: 'Special Elite', cursive;
-    color:white;
-    text-align: center;
-    border-radius: 20px;
-}
-.boton:hover {
-    box-shadow: inset 0 0 20px rgba(254, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.4);
-    text-shadow: 2px 1px 6px #fff;
 
+header .nav-link {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 15px;
+}
+
+footer {
+  background-color: black;
+  font-size: "Special Elite", cursive;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-family: "Special Elite", cursive;
+  padding: 10px;
+}
+
+footer .contacto, footer .mapa__sitio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  gap: 5px;
+}
+
+footer .mapa__sitio p {
+  text-decoration: underline;
+}
+
+footer .mapa__sitio li {
+  list-style: none;
+  margin: 5px;
+}
+
+footer .mapa__sitio a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 360px) {
+  footer .mapa__sitio {
+    display: none;
   }
-  
+}
 
+main {
+  background-color: #E69600;
+  padding: 10px;
+}
+
+main .encabezado__servicio h2 {
+  font-family: "Josefin Slab", serif;
+  font-size: 5em;
+  text-align: center;
+  padding: 10px;
+}
+
+main .encabezado__servicio p {
+  font-family: "Pacifico", cursive;
+  font-size: 2em;
+  text-align: center;
+}
+
+main article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (max-width: 360px) {
+  main {
+    font-size: 70%;
+  }
+  article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+/*# sourceMappingURL=marketing.css.map */
