--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,40 +1,143 @@
-main{
-    background-color: #E69600 ;
+* {
+  margin: 0;
+  padding: 0;
 }
-section{
-    margin:10px;
+
+header {
+  background-color: black;
 }
-.paginas__web{
+
+header .nav-brand {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 10px;
+  font-size: xx-large;
+  text-align: center;
+}
+
+header .nav-link {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 15px;
+}
+
+footer {
+  background-color: black;
+  font-size: "Special Elite", cursive;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-family: "Special Elite", cursive;
+  padding: 10px;
+}
+
+footer .contacto, footer .mapa__sitio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  gap: 5px;
+}
+
+footer .mapa__sitio p {
+  text-decoration: underline;
+}
+
+footer .mapa__sitio li {
+  list-style: none;
+  margin: 5px;
+}
+
+footer .mapa__sitio a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 360px) {
+  footer .mapa__sitio {
+    display: none;
+  }
+}
+
+main {
+  background-color: #E69600;
+}
+
+main h2 {
+  font-family: "Josefin Slab", serif;
+  text-align: center;
+  text-decoration: underline;
+  color: #AA1E1E;
+  font-size: 3em;
+  font-weight: 900;
+}
+
+main .paginas__web {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .paginas__web article {
+  margin: 1em;
+  width: 50%;
+}
+
+main .paginas__web .trabajos__realizados img {
+  max-width: 100%;
+  margin: 1em;
+}
+
+main .paginas__web .trabajos__realizados img:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+main .paginas__web .titulo__proyecto {
+  font-family: "Josefin Slab", serif;
+  font-size: 25px;
+  text-align: center;
+}
+
+@media screen and (max-width: 360px) {
+  main {
+    font-size: 80%;
+  }
+  main .paginas__web {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .trabajos__realizados img {
+    max-width: 65%;
+    margin: 0 auto;
+  }
 }
-h2{
-    font-family: 'Josefin Slab', serif;
-    text-align: center;
-    text-decoration: underline;
-    color: #AA1E1E;
-    font-size: 50px;
-    font-weight: 900;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-.trabajos__realizados{
-    margin: 20 px;
-}
-.trabajos__realizados img{
-    margin:15px;
-}
-.trabajos__realizados img:hover{
-   transform: scale(1.5);
-}
-.tituloProyecto{
-    font-family: 'Josefin Slab', serif;
-    font-size: 25px;
-    margin:5px;
-    text-align: center;
-
-
-}
+/*# sourceMappingURL=portfolio.css.map */
