--- a/css/web.css
+++ b/css/web.css
@@ -1,78 +1,153 @@
-main{
-    background-color: #E69600;
+main {
+  background-color: #E69600;
+  padding: 10px;
 }
 
-.container{
-    padding: 15px;
-    margin: 20px;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-  
+section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
-.encabezado__servicio h2{
-    font-family: 'Josefin Slab', serif;
-    font-size:50px ;
-    text-align: center;
-    text-decoration: underline;
-    font-weight: 900px;
-    margin: 20px;
-    color: #AA1e1e;
-}
-.encabezado__servicio p{
-    font-family: 'Josefin Slab', serif;
-    font-size:30px ;
-    text-align: center;
-    font-weight: 900px;
-    margin: 20px;
-}
-.container li{
-    list-style: none;
-}
-.servicio{
-    margin:20px;
-    padding: 10px;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,80,0,1) 0%, rgba(255,0,202,1) 100%);
-    border-top-left-radius: 30px;
-    border-bottom-right-radius: 30px;
 
+.encabezado__servicio h2 {
+  font-family: "Josefin Slab", serif;
+  font-size: 5em;
+  text-align: center;
+  padding: 10px;
 }
-.servicio:hover{
-    transform: scale(1.2);
 
+.encabezado__servicio p {
+  font-family: "Pacifico", cursive;
+  font-size: 2.5em;
+  text-align: center;
 }
-.servicio i{
-    width: 25px;
-    height: 25px;
-    margin:15px
-}
-.servicio ul{
-    font-size: large;
-    font-family: 'Pacifico', cursive;
-}
-.titulo{
-        margin: 15px;
-        padding:10px;
-        font-family: 'Josefin Slab', serif;
-        font-weight: 800;
-        font-size: x-large;
-        text-align: center;
-        background-color: #AA1e1e;
-}
-.boton{
-    margin:10px;
-    padding:15px;
-    background-color: black;
-    font-family: 'Special Elite', cursive;
-    color:white;
-    text-align: center;
-    border-radius: 20px;
-}
-.boton:hover {
-    box-shadow: inset 0 0 20px rgba(254, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.4);
-    text-shadow: 2px 1px 6px #fff;
 
+.beginner {
+  background-color: white;
+  border-radius: 20px;
+  width: 30%;
+  margin: 3%;
+  font-family: "Pacifico", cursive;
+}
+
+.beginner h3 {
+  background-color: #AA1E1E;
+  font-family: "Josefin Slab", serif;
+  color: yellow;
+  text-align: center;
+}
+
+.beginner li {
+  list-style: none;
+}
+
+.beginner i {
+  margin: 5px;
+}
+
+.beginner .boton {
+  width: 35%;
+  background-color: black;
+  font-family: "Special Elite", cursive;
+  text-align: center;
+  color: white;
+}
+
+.semi-senior {
+  background-color: white;
+  border-radius: 20px;
+  width: 30%;
+  margin: 3%;
+  font-family: "Pacifico", cursive;
+}
+
+.semi-senior h3 {
+  background-color: #AA1E1E;
+  font-family: "Josefin Slab", serif;
+  color: yellow;
+  text-align: center;
+}
+
+.semi-senior li {
+  list-style: none;
+}
+
+.semi-senior i {
+  margin: 5px;
+}
+
+.semi-senior .boton {
+  width: 35%;
+  background-color: black;
+  font-family: "Special Elite", cursive;
+  text-align: center;
+  color: white;
+}
+
+.senior {
+  background-color: white;
+  border-radius: 20px;
+  width: 30%;
+  margin: 3%;
+  font-family: "Pacifico", cursive;
+}
+
+.senior h3 {
+  background-color: #AA1E1E;
+  font-family: "Josefin Slab", serif;
+  color: yellow;
+  text-align: center;
+}
+
+.senior li {
+  list-style: none;
+}
+
+.senior i {
+  margin: 5px;
+}
+
+.senior .boton {
+  width: 35%;
+  background-color: black;
+  font-family: "Special Elite", cursive;
+  text-align: center;
+  color: white;
+}
+
+@media screen and (max-width: 360px) {
+  main {
+    font-size: 75%;
   }
-  
-
+  section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .beginner {
+    background-color: white;
+    border-radius: 20px;
+    width: 90%;
+    margin: 3%;
+    font-family: "Pacifico", cursive;
+  }
+  .semi-senior {
+    background-color: white;
+    border-radius: 20px;
+    width: 90%;
+    margin: 3%;
+    font-family: "Pacifico", cursive;
+  }
+  .senior {
+    background-color: white;
+    border-radius: 20px;
+    width: 90%;
+    margin: 3%;
+    font-family: "Pacifico", cursive;
+  }
+}
+/*# sourceMappingURL=web.css.map */
