--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,31 +1,140 @@
-main{
-    background-color: #E69600 ;
+* {
+  margin: 0;
+  padding: 0;
 }
-#contact{
-    margin:20px;
-    padding:20px;
-    background-color: white;       
+
+header {
+  background-color: black;
 }
-#contact legend {
-    font-family:fantasy;
-    font-size: 20px;
-    color: darkgray;
-    text-align: center;
-    background-color: brown;
-    margin: 15px;
-    padding: 10px;
+
+header .nav-brand {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 10px;
+  font-size: xx-large;
+  text-align: center;
 }
-#contact label{
-    display: block;
-    margin-left: 2px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+header .nav-link {
+  font-family: "Special Elite", cursive;
+  color: white;
+  margin: 15px;
 }
-#contact input{
-    margin:10px;
-    padding: 10px;
+
+header .nav-link:hover {
+  background-color: white;
+  color: black;
 }
-#contact textarea{
-    display: block;
-    width: 80%;
-    height: 250px;
+
+footer {
+  background-color: black;
+  font-size: "Special Elite", cursive;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-family: "Special Elite", cursive;
+  padding: 10px;
 }
+
+footer .contacto, footer .mapa__sitio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  gap: 5px;
+}
+
+footer .mapa__sitio p {
+  text-decoration: underline;
+}
+
+footer .mapa__sitio li {
+  list-style: none;
+  margin: 5px;
+}
+
+footer .mapa__sitio a {
+  color: white;
+  text-decoration: none;
+}
+
+footer .mapa__sitio a:hover {
+  text-decoration: underline;
+}
+
+.boton-subida {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  bottom: 10px;
+  right: 1px;
+  border-radius: 50%;
+}
+
+.boton-subida img {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+}
+
+@media (max-width: 360px) {
+  footer .mapa__sitio {
+    display: none;
+  }
+  .boton-subida {
+    display: none;
+  }
+}
+
+main {
+  background-color: #E69600;
+}
+
+main #contact {
+  padding: 1em;
+  background-color: #FF5000;
+}
+
+main #contact legend {
+  font-family: "Josefin Slab", serif;
+  font-size: 1.4em;
+  color: white;
+  text-align: center;
+  background-color: brown;
+  padding: 10px;
+}
+
+main #contact label {
+  display: block;
+  margin-left: 2px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main #contact input {
+  margin: 0.5em;
+  padding: 0.5em;
+}
+
+main #contact #nombre {
+  width: 70%;
+}
+
+main #contact #email {
+  width: 70%;
+}
+
+main #contact textarea {
+  display: block;
+  width: 80%;
+  height: 16em;
+}
+/*# sourceMappingURL=contacto.css.map */
