--- a/css/marketing.css
+++ b/css/marketing.css
@@ -21,6 +21,11 @@ header .nav-link {
   margin: 15px;
 }
 
+header .nav-link:hover {
+  background-color: white;
+  color: black;
+}
+
 footer {
   background-color: black;
   font-size: "Special Elite", cursive;
@@ -62,8 +67,30 @@ footer .mapa__sitio a {
   text-decoration: none;
 }
 
+footer .mapa__sitio a:hover {
+  text-decoration: underline;
+}
+
+.boton-subida {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  bottom: 10px;
+  right: 1px;
+  border-radius: 50%;
+}
+
+.boton-subida img {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+}
+
 @media (max-width: 360px) {
   footer .mapa__sitio {
+    display: none;
+  }
+  .boton-subida {
     display: none;
   }
 }
