--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -31,13 +31,34 @@ footer{
             color: white;
             text-decoration: none;
         }
+        a:hover{
+
+            text-decoration: underline;
+        }
     }
 }
+.boton-subida{
+        width: 100px;
+        height: 100px;
+        position: fixed;
+        bottom:10px;
+        right: 1px;
+        border-radius: 50% ;
+            img{
+            width: 100px;
+            height: 100px;
+            position: fixed;
+            }
+}
+
 @media (max-width:360px){
 footer{
     .mapa__sitio{
         display:none;
     }
 
+}
+.boton-subida{
+    display: none;
 }
 }
