--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,6 +13,7 @@ $color_titulo:#AA1E1E;
 
 header{
     background-color: black;
+   
     .nav-brand{
         font-family: $fuente-links;
         color: white;
@@ -25,4 +26,10 @@ header{
         color: white;
         margin: 15px;
     }
+    .nav-link:hover{
+        background-color: white;
+        color: black;
+      
+    }
+
 }
