--- a/css/marketing.css
+++ b/css/marketing.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
@@ -134,6 +134,7 @@ main article {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin: auto;
   }
 }
 /*# sourceMappingURL=marketing.css.map */
