--- a/sass/marketing.scss
+++ b/sass/marketing.scss
@@ -10,7 +10,7 @@ $fuente-links:'Special Elite', cursive;
 main{
     background-color: $color_primario;
     padding: 10px;
-
+ 
     .encabezado__servicio{
 
         h2{
@@ -31,11 +31,16 @@ main{
     }
 }
 @media screen and (max-width:360px) {
+
     main{
         font-size: 70%;
     }
+  
     article{
+
         display: flex;
         flex-direction: column;
+        margin: auto;
     }
+  
 }
