--- a/css/marketing.css
+++ b/css/marketing.css
@@ -1,5 +1,5 @@
 * {
-  margin: auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -104,7 +104,6 @@ main .encabezado__servicio h2 {
   font-family: "Josefin Slab", serif;
   font-size: 5em;
   text-align: center;
-  padding: 10px;
 }
 
 main .encabezado__servicio p {
@@ -124,7 +123,7 @@ main article {
 
 @media screen and (max-width: 360px) {
   main {
-    font-size: 70%;
+    font-size: 60%;
   }
   article {
     display: -webkit-box;
@@ -134,7 +133,12 @@ main article {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=marketing.css.map */
