--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ header .nav-brand {
   font-family: "Special Elite", cursive;
   color: white;
   margin: 10px;
-  font-size: 2.25em;
+  font-size: xx-large;
   text-align: center;
 }
 
@@ -24,12 +24,6 @@ header .nav-link {
 header .nav-link:hover {
   background-color: white;
   color: black;
-}
-
-@media (max-width: 640px) {
-  .nav-brand {
-    font-size: 10%;
-  }
 }
 
 footer {
