--- a/sass/web.scss
+++ b/sass/web.scss
@@ -10,10 +10,6 @@ $color_titulo:#AA1E1E;
 main{
     background-color: $color_primario;
     padding: 10px;
-}
-section{
-    display:flex;
-}
     .encabezado__servicio{
         h2{
         font-family: $fuente-principal;
@@ -26,6 +22,12 @@ section{
         font-size: 2.5em;
         text-align: center;
     }
+}
+
+section{
+    display:flex;
+}
+
 }
 
 @each $servicios in beginner, semi-senior, senior {
@@ -42,11 +44,15 @@ section{
             color: yellow;
             text-align: center;
         }
-        li{
+        ul{
+            font-size: 1.5em;
+                li{
             list-style: none;
+             }
         }
         i{
-            margin: 5px;
+            margin: 15px;
+            font-size: 1.7em;
         }
         .boton{
             width: 35%;
