--- a/css/marketing.css
+++ b/css/marketing.css
@@ -117,6 +117,13 @@ main .encabezado__servicio p {
   text-align: center;
 }
 
+main article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
 @media screen and (max-width: 412px) {
   main {
     font-size: 60%;
