--- a/sass/marketing.scss
+++ b/sass/marketing.scss
@@ -10,7 +10,7 @@ $fuente-links:'Special Elite', cursive;
 main{
     background-color: $color_primario;
 
- 
+    
     .encabezado__servicio{
 
         h2{
@@ -24,6 +24,15 @@ main{
         text-align: center;
         }
     }
+    article{
+        display: flex;
+        gap:10px;
+
+
+    }
+  
+    
+
 
 }
 @media screen and (max-width:412px) {
