--- a/sass/web.scss
+++ b/sass/web.scss
@@ -6,85 +6,69 @@ $color_primario:#E69600;
 $color_secundario:#FF5000;
 $color_titulo:#AA1E1E;
 
-
 main{
     background-color: $color_primario;
-    padding: 10px;
+    padding: 1%;
     .encabezado__servicio{
         h2{
-        font-family: $fuente-principal;
-        font-size: 5em;
-        text-align: center;
-        padding: 10px;
-    }
-        p{
-        font-family: $fuente-secundaria;
-        font-size: 2.5em;
-        text-align: center;
-    }
-}
-
-section{
-    display:flex;
-}
-
-}
-
-@each $servicios in beginner, semi-senior, senior {
-    .#{$servicios}{
-        background-color: white;
-        border-radius: 30px;
-        width: 30%;
-        margin:3%;
-        font-family:$fuente-secundaria;
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-        h3{
-            background-color: $color_titulo;
             font-family: $fuente-principal;
-            color: yellow;
+            text-align: center;
+            padding: 5px;
+        }
+        p{
+            font-family: $fuente-secundaria;
             text-align: center;
         }
-        ul{
-            font-size: 1.5em;
-                li{
-            list-style: none;
-             }
-        }
-        i{
-            margin: 15px;
-            font-size: 1.7em;
-        }
-        .boton{
-            width: 35%;
-            background-color: black;
-            font-family: $fuente-links;
-            text-align: center;
-            a{
-                text-decoration: none;
-                color:white;
-            }
-
-        }
-    }
-    
-}
-@media screen and (max-width:360px) {
-    main{
-        font-size: 75%;
+      
     }
     section{
         display: flex;
         flex-direction: column;
+        h3{
+            background-color:$color_titulo;
+            text-align: center;
+            font-family: $fuente-secundaria;
+           }
     }
-    @each $servicios in beginner, semi-senior, senior {
-        .#{$servicios}{
-            background-color: white;
-            border-radius: 20px;
-            width: 90%;
-            margin:3%;
-            font-family:$fuente-secundaria;
-            
+
+}
+@each $servicio in beginner,semi-senior,senior {
+    .#{$servicio}{
+    background-color: white;
+    margin-bottom: 10px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+       li{
+            list-style: none;
+             }
+        i{
+            margin-right: 15px;
         }
+        .boton{
+            background-color: black;
+            text-align: center;
+            a{
+            text-decoration: none;
+            color: white;
+            font-family: $fuente-links;
+            }
+
+        }
+      
         
     }
+}
+@media screen and (min-width:760px){
+  main{
+      font-size: 1.7em;
+        h2{
+            font-size: 2.1em;
+        }
+
+    section{
+        flex-direction: row;
+        gap:15px;
+        justify-content: center;
+     }
+  }
+    
 }
