--- a/sass/marketing.scss
+++ b/sass/marketing.scss
@@ -14,8 +14,8 @@ main{
     
     .encabezado__servicio{
 
-        h2{
-        font-family: $fuente-principal !important;
+        h1{
+        font-family: $fuente-principal;
         font-size: 5em;
         text-align: center;
            }
