--- a/css/marketing.css
+++ b/css/marketing.css
@@ -71,7 +71,7 @@ footer .mapa__sitio a:hover {
   text-decoration: underline;
 }
 
-.boton-subida {
+.boton__subida {
   width: 100px;
   height: 100px;
   position: fixed;
@@ -80,7 +80,7 @@ footer .mapa__sitio a:hover {
   border-radius: 50%;
 }
 
-.boton-subida img {
+.boton__subida img {
   width: 100px;
   height: 100px;
   position: fixed;
@@ -90,13 +90,13 @@ footer .mapa__sitio a:hover {
   footer .mapa__sitio {
     display: none;
   }
-  .boton-subida {
+  .boton__subida {
     display: none;
   }
 }
 
 @media (max-width: 640px) {
-  .boton-subida {
+  .boton__subida {
     display: none;
   }
 }
@@ -106,8 +106,8 @@ main {
   padding: 2%;
 }
 
-main .encabezado__servicio h2 {
-  font-family: "Josefin Slab", serif !important;
+main .encabezado__servicio h1 {
+  font-family: "Josefin Slab", serif;
   font-size: 5em;
   text-align: center;
 }
